Ajout Fonctionnalité modifier role d'un user

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -14,3 +14,9 @@ app_product_show:
 app_logout:
     path: /logout
     methods: GET
+
+# Gestion des routes admin pour les utilisateurs
+app_admin_user:
+    resource: routes/admin_user.yaml
+    prefix: /admin/user
+    name_prefix: admin_user_
