--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,8 +4,9 @@ security:
             algorithm: argon2i
 
     role_hierarchy:
-            ROLE_ADMIN:       ROLE_USER
-            ROLE_SUPER_ADMIN: [ROLE_ADMIN]
+            ROLE_MODERATEUR:  ROLE_USER
+            ROLE_ADMIN:       ROLE_MODERATEUR
+            ROLE_SUPER_ADMIN: ROLE_ADMIN
 
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
@@ -36,6 +37,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/produit/gestion, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/produit/suppression, roles: ROLE_MODERATEUR}
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/superadmin, roles: ROLE_SUPER_ADMIN }
