--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,7 +1,28 @@
 easy_admin:
     entities:
        # List the entity class name you want to manage
-        - App\Entity\Product
-        - App\Entity\Category
-        - App\Entity\User
-        - App\Entity\Tag
+
+        Product:
+            class: App\Entity\Product
+            # form : correspond au formulaire de création
+            form:
+                fields:
+                    - name
+                    - description
+                    - price
+                    - isPublished
+                    - imageName
+                    - category
+                    - publisher
+            # list : correspond au tableau affichant les entites
+            list:
+                fields: [name, isPublished, category, publisher]
+        Category:
+            class: App\Entity\Category
+        User:
+            class: App\Entity\User
+        Tag:
+            class: App\Entity\Tag
+    # Personnaliser nom Admin
+    site_name:          Gestion du Back-office
+
