--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "sensio/framework-extra-bundle": "^5.3",
         "sensiolabs/security-checker": "^6.0",
         "squizlabs/php_codesniffer": "^3.4",
+        "swiftmailer/swiftmailer": "^6.0",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
@@ -23,10 +24,12 @@
         "symfony/requirements-checker": "^1.1",
         "symfony/security-bundle": "4.3.*",
         "symfony/security-csrf": "4.3.*",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "vich/uploader-bundle": "^1.9"
     },
     "config": {
         "preferred-install": {
