--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         "cocur/slugify": "^3.2",
         "doctrine/annotations": "^1.6",
         "easycorp/easyadmin-bundle": "^2.2",
+        "friendsofsymfony/ckeditor-bundle": "^2.1",
+        "fzaninotto/faker": "^1.8",
+        "knplabs/knp-paginator-bundle": "^4.0",
         "sensio/framework-extra-bundle": "^5.3",
         "sensiolabs/security-checker": "^6.0",
         "squizlabs/php_codesniffer": "^3.4",
@@ -76,5 +79,8 @@
             "allow-contrib": false,
             "require": "4.3.*"
         }
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.2"
     }
 }
